--- a/src/Styles/Components/Collaps.scss
+++ b/src/Styles/Components/Collaps.scss
@@ -35,6 +35,7 @@
   }
 
   .collapse-content{
+    border-radius: 0 0 10px 10px;
     background: #f1efef;
     width: 80%;
     color: #FF6060;
@@ -43,5 +44,14 @@
     font-size: 20px;
     z-index: -1;
   }
+
+  .collapse-aboutText{
+    padding: 15px;
+  }
+
 }
 
+.collapse-aco{
+  display: flex;
+
+}
