--- a/src/Styles/Components/Footer.scss
+++ b/src/Styles/Components/Footer.scss
@@ -5,11 +5,16 @@
     filter: invert(100%) grayscale(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(1000%) contrast(100%);
 
   }
-  margin-top: 50px;
+  margin-top: 70px;
   width: 100%;
   background: black;
   height: 130px;
   color: white;
   text-align: center;
   padding-top: 40px;
+
+  p{
+    font-size: 20px;
+    margin-top: 50px;
+  }
 }
