--- a/src/Styles/Components/_CollapsAbout.scss
+++ b/src/Styles/Components/_CollapsAbout.scss
@@ -1,4 +1,4 @@
-.collapse{
+.collapseAbout{
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -48,10 +48,5 @@
   .collapse-aboutText{
     padding: 15px;
   }
-
-}
-
-.collapse-aco{
-  display: flex;
 
 }
