--- a/src/Styles/Components/_Header.scss
+++ b/src/Styles/Components/_Header.scss
@@ -2,10 +2,10 @@
   display: flex;
   font-family: "Mont", serif;
   justify-content: space-between;
-  //margin: 50px 100px 100px 100px;
   align-items: center;
   width:80%;
-  margin: 40px auto 60px;
+  margin: 0 auto 60px;
+  padding-top: 50px;
 
   img{
     height: 70px;
