--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -1,10 +1,11 @@
 @import "./Setting";
-@import "./Components/Header";
+@import "Components/Header";
 @import "./Pages/Home";
-@import "./Components/Appart";
-@import "./Components/Footer";
-@import "./Components/Carousels";
+@import "Components/Appart";
+@import "Components/Footer";
+@import "Components/Carousels";
 @import "./Pages/Page404";
 @import "./Pages/About";
 @import "./Pages/Accomodation";
-@import "./Components/Collaps";
+@import "Components/CollapsAbout";
+@import "./Components/CollapsAco";
