--- a/src/Styles/Components/_CollapsAco.scss
+++ b/src/Styles/Components/_CollapsAco.scss
@@ -1,6 +1,6 @@
 .collapseAco{
   flex-direction: column;
-  width: 50%;
+  width: 125%;
   align-items: center;
   margin: 25px auto;
 
@@ -16,13 +16,13 @@
     justify-content: space-between;
     align-items: center;
     font-size: 20px;
-    padding-left: 30px;
     cursor: pointer;
+    padding-left: 15px;
 
 
     .iconArrowAco{
       width: 20px;
-      padding-right: 30px;
+      padding-right: 10px;
 
     }
 
@@ -60,8 +60,12 @@
 }
 .collapse-aco{
   display: flex;
-  margin-right: -2%;
+
 }
 
-
-
+@media only screen and (max-width: 375px) {
+  .collapseAco{
+    width: 105%;
+    margin-bottom: -6px;
+  }
+}
