--- a/src/Styles/Components/_Appart.scss
+++ b/src/Styles/Components/_Appart.scss
@@ -74,3 +74,22 @@
     }
   }
 }
+
+@media only screen and (max-width: 991px) {
+  .main-container{
+    background: none;
+    width: 92%;
+    margin-top: -25px;
+
+    .all-image{
+      display: flex;
+      flex-direction: column;
+
+      .card{
+        width: 100%;
+        height: 260px;
+        margin-bottom: -15px;
+      }
+    }
+  }
+}
