--- a/src/Styles/Pages/Accomodation.scss
+++ b/src/Styles/Pages/Accomodation.scss
@@ -59,6 +59,10 @@
         display: flex;
         padding-left: -50px;
       }
+
+      .star{
+        padding: 2px;
+      }
     }
   }
   .collapse-aco{
