--- a/src/Styles/Components/_Carousels.scss
+++ b/src/Styles/Components/_Carousels.scss
@@ -12,7 +12,7 @@
     display: block;
   }
 
-  .toutou{
+  .arrows{
     background: none;
     border: none;
     cursor: pointer;
@@ -39,7 +39,7 @@
     font-family: "Mont", serif;
   }
 
-}@media only screen and (max-width: 375px) {
+}@media only screen and (max-width: 768px) {
 
   .image-picture{
     margin-top: -30px;
@@ -49,7 +49,7 @@
       border-radius: 15px;
 
     }
-    .toutou{
+    .arrows{
       margin-top: -10px;
       .arrow{
         height: 24px;
@@ -68,4 +68,15 @@
 
   }
 
+}
+
+@media only screen and (max-width: 1024px) {
+  .image-picture{
+    .left{
+      right: 32%;
+    }
+    .right{
+      left: 35%;
+    }
+  }
 }
