--- a/src/Styles/Components/_Header.scss
+++ b/src/Styles/Components/_Header.scss
@@ -32,7 +32,7 @@
   }
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 768px) {
   .Header{
     padding-top: 20px;
     width: 90%;
@@ -50,5 +50,11 @@
         }
       }
     }
+  }
+}
+
+@media only screen and (max-width: 1024px){
+  .Header{
+    width: 93%;
   }
 }
