--- a/src/Styles/Pages/Home.scss
+++ b/src/Styles/Pages/Home.scss
@@ -19,7 +19,7 @@
     }
 }
 
-@media only screen and (max-width: 375px) {
+@media screen and (max-width: 768px) {
 
     .title-background{
         font-family: "Mont", serif;
@@ -29,7 +29,7 @@
         margin-top: -40px;
 
         h1{
-            width: 70%;
+            width: 86%;
             font-size: 24px;
             padding: 30px 10px 5px 20px;
             text-align: match-parent;
@@ -40,4 +40,15 @@
         }
     }
 }
+
+@media screen and (max-width: 1024px){
+    .title-background{
+        width: 92%;
+        h1{
+            font-size: 30px;
+        }
+    }
+}
+
+
 
