--- a/src/Styles/Pages/Page404.scss
+++ b/src/Styles/Pages/Page404.scss
@@ -25,7 +25,7 @@
   text-decoration: underline;
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 768px) {
   .pageError{
     h1{
       font-size: 96px;
@@ -39,6 +39,18 @@
   }
   .pageReturn{
     margin-bottom: 34%;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .pageError{
+    h1{
+      font-size: 96px;
+    }
+  }
+  .pageReturn{
+
+    margin-bottom: 20%;
   }
 }
 
