--- a/src/Styles/Components/_CollapsAco.scss
+++ b/src/Styles/Components/_CollapsAco.scss
@@ -22,7 +22,7 @@
 
     .iconArrowAco{
       width: 20px;
-      padding-right: 10px;
+      padding-right: 30px;
 
     }
 
@@ -46,10 +46,7 @@
   }
 
   .collapse-acoTextAco{
-    padding-top: 25px;
-    padding-left: 15px;
-    padding-right: 7px;
-    padding-bottom: 50px;
+    padding: 25px 7px 50px 15px;
 
     .equipe{
       display: flex;
@@ -67,5 +64,17 @@
   .collapseAco{
     width: 105%;
     margin-bottom: -6px;
+
+    .collapse-contentAco{
+      height: auto;
+    }
+  }
+}
+
+@media only screen and (max-width: 1024px){
+  .collapseAco{
+    .collapse-contentAco{
+      height: auto;
+    }
   }
 }
